added tags for doc classification to keep permalinks clean

--- a/docs/_posts/2014-03-01-usage.markdown
+++ b/docs/_posts/2014-03-01-usage.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "Usage"
 date:   2014-03-01 19:53:19
 categories: 0.0.1
+tags: core
 ---
 
 With Princess, you have two options for usage:
