--- a/docs/_posts/2014-03-01-usage.markdown
+++ b/docs/_posts/2014-03-01-usage.markdown
@@ -6,32 +6,38 @@ categories: 0.0.1
 tags: core
 ---
 
-With Princess, you have two options for usage:
+With Princess, you have three options for usage:
 
 1. The entire library.
-2. Individual modules.
+2. Individual modules with preset styles.
+3. Individual mixins. *experimental; use at your own risk*
 
-Both allow for easy customization and require you to include the Normalize library.
+All options allow for easy customization and are built on top of the Normalize library.
 
-To read more about customization, go here: [Customizations]({% post_url 2014-03-01-customizations %})
+*To read more about customization, go here: [Customizations]({% post_url 2014-03-01-customizations %})*
 
 ## Downloading
 
-To download Princess, clone the repository from Git or grab the zip here.
+To download Princess, clone the repository from Git or grab the zip.
 
-Select the files you want to use (see below) and store them in your `css` folder.
+Select the files you want to use (see below for more on this) and store them in your `css` folder.
 
 ## Full library
 
-You only have to require two files for the full Princess library.
+You only have to require one file for the full Princess library.
 
 {% highlight html %}
-<link rel="stylesheet" href="/css/normalize.css">
 <link rel="stylesheet" href="/css/princess.css">
 {% endhighlight %}
 
-If you've done any customizations to the variables, colors, or inside of `custom.scss`, these will be included.
+This will include Normalize along with the base stylings for Princess and all of its modules.
 
 ## Individual modules
 
-Princess is comprised of numerous modules. 
+Princess is comprised of numerous modules that rely on mixins. The modules have preset styles to them that all work together in a very lovely aesthetically pleasing manner.
+
+For more information on using the individual modules, see here.
+
+## Individual mixins
+
+If you desire total control of your styles, you can opt to use the mixins on an individual basis. Documentation for mixins is included with the relevant modules (ex: transition mixins are included with the transition module documentation).
