--- a/docs/_posts/2014-03-01-images.markdown
+++ b/docs/_posts/2014-03-01-images.markdown
@@ -7,3 +7,19 @@ tags: modules
 ---
 
 Images have default styling included in [Base]({% post_url 2014-03-01-base %}). This module extends on those styles and provides additional helper classes for images.
+
+## Rounded corners
+
+{% highlight html %}
+<img src="/assets/kiwi.jpg" class="prncs-img-rounded">
+{% endhighlight %}
+
+<img src="/assets/kiwi.jpg" class="prncs-img-rounded" width="300px">
+
+### Circle
+
+{% highlight html %}
+<img src="/assets/kiwi.jpg" class="prncs-img-circle">
+{% endhighlight %}
+
+<img src="/assets/kiwi.jpg" class="prncs-img-circle" width="300px">
