clarification for img-circle

--- a/docs/_posts/2014-03-01-images.markdown
+++ b/docs/_posts/2014-03-01-images.markdown
@@ -16,7 +16,9 @@ Images have default styling included in [Base]({% post_url 2014-03-01-base %}). 
 
 <img src="/assets/kiwi.jpg" class="prncs-img-rounded" width="300px">
 
-### Circle
+## Circle
+
+*Requires a square image to form a circle.*
 
 {% highlight html %}
 <img src="/assets/kiwi.jpg" class="prncs-img-circle">
